# gl_traits

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  cmake_install.cmake
articles/: Concepts.txt  Preface.txt
gl_traits/: CMakeLists.txt
gl_traits/Helpers/: CMakeLists.txt  cube_geometry.hpp  helpers.cpp  helpers.h
gl_traits/cmake/: gl_traitsConfig.cmake.in
gl_traits/examples/: 0.Raw_Batched_2_dif_VBO.cpp  1.Batched_2_dif_VBO.cpp  2.Batch_Comp_one_VBO.cpp  2.Batched_1_one_VBO.cpp  3.Compound_one_VBO.cpp  4.Batch_Comp_one_VBO.cpp  5.Render_texture_bg.cpp  CMakeLists.txt
gl_traits/examples_assimp/: CMakeLists.txt  assimp_model.cpp  assimp_model.h  assimp_model_impl.cpp  assimp_model_impl.h  nanosuit_simple.cpp
gl_traits/include/: Sequence.hpp  Texture.hpp  basic_types.hpp  buffer_traits.hpp  enums.hpp  gl_traits.hpp  glslt_traits.hpp  gltHandle.hpp  program_traits.hpp  sequence_layout.hpp  texture_traits.hpp  type_converions.hpp  uniform_traits.hpp  vao_traits.hpp
gl_traits/sandbox/: 0.Raw_Batched_2_dif_VBO.cpp  1.Batched_2_dif_VBO.cpp  2.Batched_1_one_VBO.cpp  3.Compound_one_VBO.cpp  4.Batch_Comp_one_VBO.cpp  5.Render_texture_bg.cpp  CMakeLists.txt  assimp_model.cpp  assimp_model.h  assimp_model_impl.cpp  assimp_model_impl.h  buffer_test.cpp  handles_tests.cpp  helpers.cpp  helpers.hpp  nanosuit_simple.cpp  sequence_test.cpp  shaders_test.cpp  traits_equivalence.cpp
gl_traits/sandbox/resources/: kronstein.IFC
gl_traits/sandbox/shaders/: texture_bg.fs
gl_traits/src/: CMakeLists.txt  gl_traits.cpp  shader_traits.cpp
gl_traits/src/include/gl_traits/: Sequence.hpp  basic_types.hpp  buffer_traits.hpp  enums.hpp  equivalence.hpp  gl_traits.hpp  glslt_traits.hpp  gltEnums.hpp  gltHandle.hpp  glt_definitions.hpp  program_traits.hpp  sequence_layout.hpp  shader_traits.hpp  texture_traits.hpp  traits.hpp  traits_common.hpp  type_converions.hpp  uniform_traits.hpp  vao_traits.hpp
gl_traits/src/src/: gl_traits.cpp  shader_traits.cpp
gl_traits/test_assets/: CMakeLists.txt
gl_traits/test_assets/resources/: kronstein.IFC
gl_traits/tests/: CMakeLists.txt  buffer_test.cpp  handles_tests.cpp  program_uniforms_test.cpp  sequence_test.cpp  shaders_test.cpp  textures_test.cpp  traits_equivalence.cpp
gl_traits/tests/shaders/: nanosuit_simple.fs  nanosuit_simple.vs  texture_bg.fs  texture_bg.vs
glad/include/glad/: glad.h
glt_parser/: CMakeLists.txt
glt_parser/config/: glt_parserConfig.cmake.in
glt_parser/include/: FolderScanner.h  IDataType.h  IGeneratorGLT.h  IHeaderGenerator.h  IParseAlgorithm.h  IParser.h  IShaderParser.h  ISourceFile.h  IVariable.h  ShaderParser.h
glt_parser/include/ParseAlgorithm/: IParseAlgorithm.h  ParseAlgorithm.h
glt_parser/marconi/: Article.md  CMakeLists.txt  app.cpp
glt_parser/parsecl/: CMakeLists.txt  app.cpp
glt_parser/sandbox/: nanosuit_simple.vs  test_FolderScanner.cpp  test_ParseAlgorithm.cpp  texture_bg.fs
glt_parser/src/: ArgShaderExtensions.cpp  ArgShaderExtensions.h  Arguments.cpp  ComLineParser.cpp  DataType.cpp  FolderScanner.cpp  GeneratorGLT.cpp  HeaderGenerator.cpp  ParseAlgorithm.cpp  ParseAlgorithm.h  ShaderParser.cpp  ShaderParser.h  SourceFile.cpp  SourceFile.h  Variable.cpp  Variable.h  glt_parser.cpp
include/: Sequence.hpp  Texture.hpp  basic_types.hpp  buffer_traits.hpp  enums.hpp  equivalence.hpp  gl_traits.hpp  glslt_traits.hpp  gltEnums.hpp  gltHandle.hpp  glt_definitions.hpp  program_traits.hpp  sequence_layout.hpp  shader_traits.hpp  texture_traits.hpp  traits.hpp  traits_common.hpp  type_converions.hpp  uniform_traits.hpp  vao_traits.hpp
include/glad/: glad.h
sandbox/: 0.Raw_Batched_2_dif_VBO.cpp  1.Batched_2_dif_VBO.cpp  2.Batch_Comp_one_VBO.cpp  2.Batched_1_one_VBO.cpp  2.Batched_2_one_VBO.cpp  3.Compound_one_VBO.cpp  4.Batch_Comp_one_VBO.cpp  5.Batch_Comp_two_VBO.cpp  5.Render_texture_bg.cpp  BufferMap_tests.cpp  CMakeLists.txt  assertions.cpp  buffer_fetch_attributes.cpp  buffer_test.cpp  equivalence.cpp  handles_tests.cpp  helpers.cpp  helpers.hpp  map_uniform_funcs.cpp  program_uniforms_test.cpp  shaders_test.cpp  textures_test.cpp  traits_attribute_compound.cpp  traits_attribute_nth_attribute.cpp  traits_common.cpp  traits_equivalence.cpp  uniforms_test.cpp  vbos_test.cpp
sandbox/GLFW/: glfw3.h
sandbox/libs/glfw3/: glfw3dll.exp  glfw3dll.lib
sandbox/shaders/: texture_bg.fs  texture_bg.vs
src/: assertions.cpp  gl_traits.cpp  glad.c  shader_traits.cpp
src/glad/: glad.c
